--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ pytils = "*"
 uuid = "*"
 yadisk = "*"
 celery = {extras = ["redis"], version = "*"}
+redis = "*"
+eventlet = "*"
+gevent = "*"
 
 [dev-packages]
 
