add log in gitignore, add passwords in .env

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,20 @@ DATABASE_default_USER - Пользователь БД
 DATABASE_default_PASSWORD - Пароль от сервера
 DATABASE_default_HOST - Хост
 DATABASE_default_PORT - Порт
+
+# FTP Server
+FTP_USERNAME - Имя пользователя
+FTP_PASSWORD - Пароль пользоветеля
+
+# Яндекс.Диск
+YANDEX_DISK_TOKEN - Токен от Yandex.Disk
+
+# Настройки Celery
+CELERY_BROKER_URL - Сокет брокера для celery(redis, rabbitmq)
+CELERY_RESULT_BACKEND - Сокет бэкэнда для celery(redis, rabbitmq)
+
+# Настройки для рассылки
+EMAIL_HOST - Почтовый сервис
+EMAIL_PORT - Порт почтового сервиса
+EMAIL_HOST_USER - Почта отправителя
+EMAIL_HOST_PASSWORD - Пароль приложения в почтовом сервисе
